add a PageRunEnd (+/- working)